Launchpad automatic translations update.

--- a/po/stellarium-skycultures/hu.po
+++ b/po/stellarium-skycultures/hu.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: Stellarium 0.9.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-24 19:52+0000\n"
+"PO-Revision-Date: 2013-01-27 15:36+0000\n"
 "Last-Translator: misibacsi <Unknown>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-25 05:23+0000\n"
-"X-Generator: Launchpad (build 16445)\n"
+"X-Launchpad-Export-Date: 2013-01-28 05:12+0000\n"
+"X-Generator: Launchpad (build 16451)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -613,7 +613,7 @@ msgstr ""
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
-msgstr ""
+msgstr "Leláncolt asszony"
 
 #: skycultures/arabic/constellation_names.eng.fab:2
 msgid "The Well-bucket"
@@ -629,7 +629,7 @@ msgstr "Tömjénező"
 
 #: skycultures/arabic/constellation_names.eng.fab:5
 msgid "The Ram"
-msgstr ""
+msgstr "A kos"
 
 #: skycultures/arabic/constellation_names.eng.fab:6
 msgid "The Reins-holder"
@@ -657,7 +657,7 @@ msgstr "Fiatal gida"
 
 #: skycultures/arabic/constellation_names.eng.fab:12
 msgid "Who (Lady) Has Chair"
-msgstr ""
+msgstr "Széken ülő hölgy"
 
 #: skycultures/arabic/constellation_names.eng.fab:13
 msgid "Centaur"
@@ -706,7 +706,7 @@ msgstr "A sárkány"
 
 #: skycultures/arabic/constellation_names.eng.fab:24
 msgid "Part of the Horse"
-msgstr ""
+msgstr "A ló feje (1.)"
 
 #: skycultures/arabic/constellation_names.eng.fab:25
 msgid "The River"
@@ -806,7 +806,7 @@ msgstr "A kígyó"
 
 #: skycultures/arabic/constellation_names.eng.fab:49
 msgid "The Beast of Prey"
-msgstr ""
+msgstr "Vadállat"
 
 #: skycultures/arabic/star_names.fab:1
 msgid "Horse navel"
@@ -898,7 +898,7 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:23 skycultures/arabic/star_names.fab:25
 msgid "Shoulder of the Pleiades"
-msgstr ""
+msgstr "A Plejádok válla"
 
 #: skycultures/arabic/star_names.fab:24
 msgid "The Pleiades"
@@ -918,7 +918,7 @@ msgstr "A bika szeme"
 
 #: skycultures/arabic/star_names.fab:29
 msgid "Follower of the Pleiades"
-msgstr ""
+msgstr "A Plejádok követője"
 
 #: skycultures/arabic/star_names.fab:30
 msgid "Footstool of the giant"
@@ -1231,7 +1231,7 @@ msgstr "Az ágyékkötő"
 
 #: skycultures/arabic/star_names.fab:108
 msgid "The brighter Pherkad"
-msgstr ""
+msgstr "A fényesebb Pherkad"
 
 #: skycultures/arabic/star_names.fab:109
 msgid "The southern claw"
@@ -1247,7 +1247,7 @@ msgstr "Az északi karom"
 
 #: skycultures/arabic/star_names.fab:112
 msgid "The dimmer Pherkad"
-msgstr ""
+msgstr "A halványabb Pherkad"
 
 #: skycultures/arabic/star_names.fab:113
 msgid "Shepherd's crook"
@@ -1263,7 +1263,7 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:116
 msgid "The broken ring of stars"
-msgstr ""
+msgstr "A csillagok elszakadt gyűrűje"
 
 #: skycultures/arabic/star_names.fab:117
 msgid "Neck of the snake"
@@ -1447,7 +1447,7 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:163
 msgid "Part of the horse"
-msgstr ""
+msgstr "A ló feje (2.)"
 
 #: skycultures/arabic/star_names.fab:164
 msgid "The right forearm"
@@ -2247,7 +2247,7 @@ msgstr "A jegesmedve szelleme"
 
 #: skycultures/inuit/star_names.fab:3
 msgid "Never Moves"
-msgstr ""
+msgstr "A nem mozduló"
 
 #: skycultures/inuit/star_names.fab:4
 msgid "Name of a Murdered Man"
@@ -2450,7 +2450,7 @@ msgstr "Égi szárnyas"
 
 #: skycultures/korean/constellation_names.eng.fab:46
 msgid "Shrine of Sky"
-msgstr ""
+msgstr "Égi szentély"
 
 #: skycultures/korean/constellation_names.eng.fab:48
 msgid "Northeastern Nations"
@@ -2803,7 +2803,7 @@ msgstr "Határőr tábornok"
 
 #: skycultures/korean/constellation_names.eng.fab:142
 msgid "Celebration of Sky"
-msgstr ""
+msgstr "Az égbolt ünneplése"
 
 #: skycultures/korean/constellation_names.eng.fab:143
 msgid "Flag of Emperor"
