--- a/po/stellarium-skycultures/vi.po
+++ b/po/stellarium-skycultures/vi.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2012-12-09 10:15+0000\n"
+"PO-Revision-Date: 2013-01-27 11:54+0000\n"
 "Last-Translator: thanbang <thanbang00@gmail.com>\n"
 "Language-Team: Vietnamese <vi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-09 04:59+0000\n"
-"X-Generator: Launchpad (build 16412)\n"
+"X-Launchpad-Export-Date: 2013-01-28 05:12+0000\n"
+"X-Generator: Launchpad (build 16451)\n"
 
 #: skycultures/western/star_names.fab:20
 msgid "Polaris"
-msgstr "Sao Bắc Cực"
+msgstr "Sao Bắc Cực (Polaris)"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -1723,7 +1723,7 @@ msgstr "Bắc Đẩu"
 
 #: skycultures/chinese/constellation_names.eng.fab:2
 msgid "Curved Array"
-msgstr "Mảng cong"
+msgstr "Câu Trần"
 
 #: skycultures/chinese/constellation_names.eng.fab:3
 msgid "Coiled Thong"
@@ -1731,24 +1731,24 @@ msgstr "Quán Tác"
 
 #: skycultures/chinese/constellation_names.eng.fab:4
 msgid "Wings"
-msgstr ""
+msgstr "Dực"
 
 #: skycultures/chinese/constellation_names.eng.fab:5
 msgid "Chariot"
-msgstr ""
+msgstr "Chẩn"
 
 #: skycultures/chinese/constellation_names.eng.fab:6
 msgid "Tail"
-msgstr ""
+msgstr "Vĩ"
 
 #: skycultures/chinese/constellation_names.eng.fab:7
 msgid "Winnowing Basket"
-msgstr ""
+msgstr "Cơ"
 
 #: skycultures/chinese/constellation_names.eng.fab:8
 #: skycultures/lakota/constellation_names.eng.fab:4
 msgid "Dipper"
-msgstr ""
+msgstr "Đẩu"
 
 #: skycultures/chinese/constellation_names.eng.fab:9
 msgid "Drum"
@@ -1765,11 +1765,11 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:12
 msgid "Horn"
-msgstr ""
+msgstr "Giác"
 
 #: skycultures/chinese/constellation_names.eng.fab:13
 msgid "Willow"
-msgstr ""
+msgstr "Liễu"
 
 #: skycultures/chinese/constellation_names.eng.fab:14
 msgid "Imperial Passageway"
@@ -1777,15 +1777,15 @@ msgstr "Liên Đạo"
 
 #: skycultures/chinese/constellation_names.eng.fab:15
 msgid "Kitchen"
-msgstr ""
+msgstr "Thiên Trù"
 
 #: skycultures/chinese/constellation_names.eng.fab:16
 msgid "River Turtle"
-msgstr ""
+msgstr "Miết"
 
 #: skycultures/chinese/constellation_names.eng.fab:17
 msgid "Stomach"
-msgstr ""
+msgstr "Vị"
 
 #: skycultures/chinese/constellation_names.eng.fab:18
 msgid "Great General"
@@ -1793,11 +1793,11 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:19
 msgid "Wall"
-msgstr ""
+msgstr "Bích"
 
 #: skycultures/chinese/constellation_names.eng.fab:20
 msgid "Legs"
-msgstr ""
+msgstr "Khuê"
 
 #: skycultures/chinese/constellation_names.eng.fab:21
 msgid "Root"
@@ -1825,11 +1825,11 @@ msgstr "Thất nương (7 chị em)"
 
 #: skycultures/chinese/constellation_names.eng.fab:27
 msgid "Market"
-msgstr ""
+msgstr "Thiên Thị viên"
 
 #: skycultures/chinese/constellation_names.eng.fab:28
 msgid "Five Chariots"
-msgstr ""
+msgstr "Ngũ Xa"
 
 #: skycultures/chinese/constellation_names.eng.fab:29
 #: skycultures/korean/constellation_names.eng.fab:122
@@ -1839,7 +1839,7 @@ msgstr ""
 #: skycultures/chinese/constellation_names.eng.fab:30
 #: skycultures/egyptian/constellation_names.eng.fab:21
 msgid "Net"
-msgstr ""
+msgstr "Tất"
 
 #: skycultures/chinese/constellation_names.eng.fab:31
 #: skycultures/korean/constellation_names.eng.fab:154
@@ -1860,7 +1860,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:35
 msgid "Three Stars"
-msgstr ""
+msgstr "Sâm"
 
 #: skycultures/chinese/constellation_names.eng.fab:36
 msgid "Four Channels"
@@ -1868,7 +1868,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:37
 msgid "Well"
-msgstr ""
+msgstr "Tỉnh"
 
 #: skycultures/chinese/constellation_names.eng.fab:38
 msgid "South River"
@@ -1892,15 +1892,15 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:43
 msgid "Circular Granary"
-msgstr ""
+msgstr "Thiên viên"
 
 #: skycultures/chinese/constellation_names.eng.fab:44
 msgid "Purple Palace"
-msgstr ""
+msgstr "Tử Vi Viên"
 
 #: skycultures/chinese/constellation_names.eng.fab:45
 msgid "Extended Net"
-msgstr ""
+msgstr "Trương"
 
 #: skycultures/chinese/constellation_names.eng.fab:46
 msgid "Arsenal"
@@ -1908,11 +1908,11 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:47
 msgid "Hook"
-msgstr ""
+msgstr "Thiên Câu"
 
 #: skycultures/chinese/constellation_names.eng.fab:48
 msgid "Supreme Palace"
-msgstr ""
+msgstr "Thái Vi Viên"
 
 #: skycultures/chinese/constellation_names.eng.fab:49
 msgid "Jade Well"
@@ -1956,7 +1956,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:58
 msgid "Rooftop"
-msgstr ""
+msgstr "Nguy"
 
 #: skycultures/chinese/constellation_names.eng.fab:59
 msgid "Thunderbolt"
@@ -1976,7 +1976,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:63
 msgid "Encampment"
-msgstr ""
+msgstr "Thất"
 
 #: skycultures/chinese/constellation_names.eng.fab:64
 msgid "Thunder and Lightning "
@@ -1988,7 +1988,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:66
 msgid "Emptiness"
-msgstr ""
+msgstr "Hư"
 
 #: skycultures/chinese/constellation_names.eng.fab:67
 msgid "Weaving Girl"
@@ -1996,23 +1996,23 @@ msgstr "Chức Nữ"
 
 #: skycultures/chinese/constellation_names.eng.fab:68
 msgid "Girl"
-msgstr ""
+msgstr "Nữ"
 
 #: skycultures/chinese/constellation_names.eng.fab:69
 msgid "Ox"
-msgstr ""
+msgstr "Ngưu"
 
 #: skycultures/chinese/constellation_names.eng.fab:70
 msgid "Heart"
-msgstr ""
+msgstr "Tâm"
 
 #: skycultures/chinese/constellation_names.eng.fab:71
 msgid "Room"
-msgstr ""
+msgstr "Phòng"
 
 #: skycultures/chinese/constellation_names.eng.fab:72
 msgid "Spring"
-msgstr ""
+msgstr "Thiên Uyên"
 
 #: skycultures/chinese/constellation_names.eng.fab:73
 msgid "Establishment"
@@ -2042,11 +2042,11 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:79
 msgid "Bond"
-msgstr ""
+msgstr "Lâu"
 
 #: skycultures/chinese/constellation_names.eng.fab:80
 msgid "Woman's Bed"
-msgstr ""
+msgstr "Nữ Sàng"
 
 #: skycultures/chinese/constellation_names.eng.fab:81
 msgid "Western Door"
@@ -2062,11 +2062,11 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:84
 msgid "Star"
-msgstr ""
+msgstr "Tinh"
 
 #: skycultures/chinese/constellation_names.eng.fab:85
 msgid "Ghosts"
-msgstr ""
+msgstr "Quỷ"
 
 #: skycultures/chinese/constellation_names.eng.fab:86
 msgid "Xuanyuan"
@@ -2078,7 +2078,7 @@ msgstr ""
 
 #: skycultures/chinese/constellation_names.eng.fab:88
 msgid "Neck"
-msgstr ""
+msgstr "Cang"
 
 #: skycultures/chinese/constellation_names.eng.fab:89
 msgid "Zaofu"
